# FFMPlayerTest

app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  native.cpp
app/src/main/cpp/include/: ImageDef.h  LogUtils.h  audio_frame.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/cpp/player/: CMakeLists.txt
app/src/main/cpp/player/include/: BaseGLRender.h  CubeGLRender.h  Decoder.h  DecoderBase.h  VideoDecoder.h  VideoGLRender.h  VideoRender.h
app/src/main/cpp/player/src/: CubeGLRender.cpp  DecoderBase.cpp  VideoDecoder.cpp  VideoGLRender.cpp
app/src/main/cpp/src/: native.cpp
app/src/main/cpp/utils/: CMakeLists.txt  GLUtils.cpp  GLUtils.h  LogUtils.h
app/src/main/java/com/example/player/: MainActivity.kt  MyGLSurfaceView.kt  NativePlayer.kt
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
